--- a/app/src/main/res/layout/item_book_list.xml
+++ b/app/src/main/res/layout/item_book_list.xml
@@ -12,15 +12,15 @@
         android:orientation="vertical" android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
-        android:padding="16dp">
+        android:padding="8dp">
 
         <ImageView
             android:id="@+id/iv_thumbnail"
             android:layout_width="70dp"
             android:layout_height="100dp"
             android:layout_marginRight="16dp"
+            app:imagePath="@{item.volumeInfo.imageLinks.thumbnail}"
             />
-<!--        app:imagePath="@{item.volumeInfo.imageLinks.thumbnail}"-->
 
 
         <TextView
@@ -29,7 +29,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
             android:layout_toRightOf="@id/iv_thumbnail"
-            android:layout_marginRight="48dp"
+            android:layout_marginRight="55dp"
             android:text="@{item.volumeInfo.title}"
             android:textStyle="bold"
             tools:text="Title"/>
@@ -39,7 +39,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/tv_title"
             android:layout_alignLeft="@id/tv_title"
-            android:layout_marginRight="48dp"
+            android:layout_marginRight="55dp"
             android:text="@{item.volumeInfo.description}"
             tools:text="Description"/>
         <TextView
@@ -49,19 +49,20 @@
             android:layout_below="@id/tv_description"
             android:layout_alignLeft="@id/tv_title"
             android:layout_marginTop="10dp"
-            android:layout_marginRight="48dp"
+            android:layout_marginRight="55dp"
             android:text="@{item.volumeInfo.authors[0]}"
             tools:text="author"/>
 
         <ImageView
             android:id="@+id/iv_bookmark"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            tools:src="@drawable/ic_star_inactive_24dp"
+            android:layout_width="55dp"
+            android:layout_height="55dp"
+            android:src="@{item.isFav().equals(`t`) ? @drawable/ic_star_active_24dp : @drawable/ic_star_inactive_24dp}"
             android:layout_alignParentRight="true"
+            android:layout_alignBottom="@+id/iv_thumbnail"
+
             />
 <!--TODO: 북마크 고치기, 작가 목록 출력 고치기-->
-<!--        android:src="@{viewModel.isBookMarked().booleanValue() ? @drawable/ic_bookmark_active_24dp : @drawable/ic_bookmark_inactive_24dp}"-->
 <!--        android:onClick="@{() -> viewModel.saveBookMark()}"-->
 
     </RelativeLayout>
