--- a/app/src/main/res/layout/item_book_list.xml
+++ b/app/src/main/res/layout/item_book_list.xml
@@ -6,6 +6,9 @@
         <variable
             name="item"
             type="com.tistory.realapril.mybooks.entity.Item" />
+        <variable
+            name="viewModel"
+            type="com.tistory.realapril.mybooks.ui.BookViewModel" />
     </data>
 
     <RelativeLayout
@@ -57,13 +60,11 @@
             android:id="@+id/iv_bookmark"
             android:layout_width="55dp"
             android:layout_height="55dp"
-            android:src="@{item.isFav().equals(`t`) ? @drawable/ic_star_active_24dp : @drawable/ic_star_inactive_24dp}"
+            android:src="@{item.isBookmarked ? @drawable/ic_star_active_24dp : @drawable/ic_star_inactive_24dp}"
             android:layout_alignParentRight="true"
             android:layout_alignBottom="@+id/iv_thumbnail"
-
             />
-<!--TODO: 북마크 고치기, 작가 목록 출력 고치기-->
-<!--        android:onClick="@{() -> viewModel.saveBookMark()}"-->
+
 
     </RelativeLayout>
 </layout>
