--- a/app/src/main/res/layout/fragment_fav_book.xml
+++ b/app/src/main/res/layout/fragment_fav_book.xml
@@ -26,7 +26,7 @@
                 android:textStyle="bold"/>
 
             <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rv_concerts"
+                android:id="@+id/rv_books"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:nestedScrollingEnabled="false"
