--- a/app/src/main/res/layout/item_book_list.xml
+++ b/app/src/main/res/layout/item_book_list.xml
@@ -9,13 +9,20 @@
         <variable
             name="viewModel"
             type="com.tistory.realapril.mybooks.ui.BookViewModel" />
+        <variable
+            name="clickListener"
+            type="com.tistory.realapril.mybooks.ui.BookListAdapter.ClickListener" />
     </data>
 
     <RelativeLayout
         android:orientation="vertical" android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
-        android:padding="8dp">
+        android:padding="8dp"
+        android:clickable="true"
+        android:focusable="true"
+        android:onClick="@{() -> clickListener.onClick(item)}"
+        >
 
         <ImageView
             android:id="@+id/iv_thumbnail"
@@ -23,6 +30,8 @@
             android:layout_height="100dp"
             android:layout_marginRight="16dp"
             app:imagePath="@{item.volumeInfo.imageLinks.thumbnail}"
+            android:clickable="false"
+            android:focusable="false"
             />
 
 
@@ -37,7 +46,10 @@
             android:textStyle="bold"
             android:maxLines="1"
             android:ellipsize="end"
-            tools:text="Title"/>
+            tools:text="Title"
+            android:clickable="false"
+            android:focusable="false"
+            />
         <TextView
             android:id="@+id/tv_description"
             android:layout_width="match_parent"
@@ -48,7 +60,10 @@
             android:maxLines="3"
             android:ellipsize="end"
             android:text="@{item.volumeInfo.description}"
-            tools:text="Description"/>
+            tools:text="Description"
+            android:clickable="false"
+            android:focusable="false"
+            />
         <TextView
             android:id="@+id/tv_author"
             android:layout_width="match_parent"
@@ -61,7 +76,10 @@
             android:maxLines="1"
             android:ellipsize="end"
 
-            tools:text="author"/>
+            tools:text="author"
+            android:clickable="false"
+            android:focusable="false"
+            />
 
         <ImageView
             android:id="@+id/iv_bookmark"
@@ -70,6 +88,8 @@
             android:src="@{item.isBookmarked ? @drawable/ic_star_active_24dp : @drawable/ic_star_inactive_24dp}"
             android:layout_alignParentRight="true"
             android:layout_alignBottom="@+id/iv_thumbnail"
+            android:clickable="false"
+            android:focusable="false"
             />
 
 
